backend/shipping/src/main/k8s/biopro-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: shipping-service-deployment
  namespace: api
  labels:
    app: shipping-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping-service
  template:
    metadata:
      labels:
        app: shipping-service
    spec:
      containers:
        - name: shipping-service
          image: local/shipping-service
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /management/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health/liveness
              port: 8080
            initialDelaySeconds: 120
