backend/shipping/src/main/k8s/keycloak-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: keycloak-deployment
  namespace: id
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0.2
          args: [ "start-dev", "--import-realm" ]
          ports:
            - containerPort: 9080
          volumeMounts:
            - name: keycloak-volume
              mountPath: /opt/keycloak/data/import
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
      volumes:
        - name: keycloak-volume
          configMap:
            name: keycloak-realm-config
