backend/shipping/src/main/k8s/manufacturing-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manufacturing-ui-service
  namespace: api
spec:
  selector:
    app: manufacturing-ui
  ports:
    - name: http
      protocol: TCP
      port: 7001
