backend/shipping/src/main/k8s/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
  namespace: queue
spec:
  selector:
    app: zookeeper
  ports:
    - protocol: TCP
      port: 2181
      targetPort: 2181
